@@ -1,7 +1,7 @@
 <!--
   ~ This file is part of the Yildiz-Engine project, licenced under the MIT License  (MIT)
   ~
-  ~  Copyright (c) 2018 Gregory Van den Borre
+  ~  Copyright (c) 2018 Grégory Van den Borre
   ~
   ~  More infos available: https://www.yildiz-games.be
   ~
@@ -26,7 +26,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>be.yildiz-games</groupId>
   <artifactId>parent</artifactId>
-  <version>2.2.4</version>
+  <version>3.0.0</version>
 
   <name>Yildiz Parent</name>
   <description>Project to hold the parent pom for all children projects.</description>
@@ -62,7 +62,11 @@
   <inceptionYear>2009</inceptionYear>
 
   <properties>
-    <java.version>9</java.version>
+    <java.version>11</java.version>
+
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <maven.compiler.release>${java.version}</maven.compiler.release>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.resources.sourceEncoding>UTF-8</project.resources.sourceEncoding>
@@ -71,20 +75,20 @@
     <maven.plugin.clean.version>3.1.0</maven.plugin.clean.version>
     <maven.plugin.compiler.version>3.8.0</maven.plugin.compiler.version>
     <maven.plugin.deploy.version>2.8.2</maven.plugin.deploy.version>
-    <maven.plugin.failsafe.version>2.19.1</maven.plugin.failsafe.version>
+    <maven.plugin.failsafe.version>2.22.1</maven.plugin.failsafe.version>
     <maven.plugin.install.version>2.5.2</maven.plugin.install.version>
     <maven.plugin.resources.version>3.1.0</maven.plugin.resources.version>
     <maven.plugin.site.version>3.7.1</maven.plugin.site.version>
-    <maven.plugin.surefire.version>2.19.1</maven.plugin.surefire.version>
+    <maven.plugin.surefire.version>2.22.1</maven.plugin.surefire.version>
     <maven.plugin.verifier.version>1.1</maven.plugin.verifier.version>
 
-    <maven.plugin.jar.version>3.1.0</maven.plugin.jar.version>
+    <maven.plugin.jar.version>3.1.1</maven.plugin.jar.version>
     <maven.plugin.source.version>3.0.1</maven.plugin.source.version>
 
     <maven.plugin.javadoc.version>3.0.1</maven.plugin.javadoc.version>
 
     <maven.plugin.antrun.version>1.8</maven.plugin.antrun.version>
-    <maven.plugin.assembly.version>3.1.0</maven.plugin.assembly.version>
+    <maven.plugin.assembly.version>3.1.1</maven.plugin.assembly.version>
     <maven.plugin.dependency.version>3.1.1</maven.plugin.dependency.version>
     <maven.plugin.enforcer.version>1.4.1</maven.plugin.enforcer.version>
     <maven.plugin.gpg.version>1.6</maven.plugin.gpg.version>
@@ -93,7 +97,7 @@
 
     <maven.plugin.doxygen.version>1.1.0</maven.plugin.doxygen.version>
     <maven.plugin.doxygen.output>${project.build.outputDirectory}/doxygen</maven.plugin.doxygen.output>
-    <maven.plugin.sonar.version>3.5.0.1254</maven.plugin.sonar.version>
+    <maven.plugin.sonar.version>3.6.0.1398</maven.plugin.sonar.version>
     <maven.plugin.jacoco.version>0.8.2</maven.plugin.jacoco.version>
     <maven.plugin.exec.version>1.6.0</maven.plugin.exec.version>
     <maven.plugin.build-helper.version>3.0.0</maven.plugin.build-helper.version>
@@ -103,16 +107,17 @@
     <maven.plugin.nexus.nexusUrl>https://oss.sonatype.org/</maven.plugin.nexus.nexusUrl>
     <maven.plugin.nexus.autoReleaseAfterClose>true</maven.plugin.nexus.autoReleaseAfterClose>
     <maven.plugin.version.version>2.7</maven.plugin.version.version>
-    <maven.plugin.jooq.version>3.11.7</maven.plugin.jooq.version>
-    <maven.plugin.docker-image.version>1.4.9</maven.plugin.docker-image.version>
-    <maven.plugin.owasp-dependency-check.version>3.3.4</maven.plugin.owasp-dependency-check.version>
+    <maven.plugin.jooq.version>3.11.9</maven.plugin.jooq.version>
+    <maven.plugin.docker-image.version>1.4.10</maven.plugin.docker-image.version>
+    <maven.plugin.owasp-dependency-check.version>4.0.2</maven.plugin.owasp-dependency-check.version>
     <sonar.binaries>${project.basedir}/target/classes</sonar.binaries>
     <sonar.junit.reportsPath>target/surefire-reports</sonar.junit.reportsPath>
 
-    <dependency.junit.version>5.1.0</dependency.junit.version>
-    <dependency.junit-platform.version>1.1.0</dependency.junit-platform.version>
-    <dependency.mockito.version>2.23.0</dependency.mockito.version>
-    <dependency.cucumber.version>4.2.0</dependency.cucumber.version>
+    <dependency.junit.version>5.3.2</dependency.junit.version>
+    <dependency.junit-platform.version>1.3.2</dependency.junit-platform.version>
+    <dependency.mockito.version>2.23.4</dependency.mockito.version>
+    <dependency.cucumber.version>4.2.2</dependency.cucumber.version>
+    <dependency.awaitility.version>1.7.0</dependency.awaitility.version>
   </properties>
 
   <prerequisites>
@@ -151,9 +156,9 @@
           <version>${maven.plugin.compiler.version}</version>
           <configuration>
             <jdkToolchain><version>${java.version}</version></jdkToolchain>
-            <release>${java.version}</release>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
+            <release>${maven.compiler.release}</release>
+            <source>${maven.compiler.source}</source>
+            <target>${maven.compiler.target}</target>
           </configuration>
         </plugin>
 
@@ -176,6 +181,13 @@
               </goals>
             </execution>
           </executions>
+          <configuration>
+            <argLine>
+              --illegal-access=permit
+            </argLine>
+            <forkCount>0</forkCount>
+            <useSystemClassLoader>false</useSystemClassLoader>
+          </configuration>
         </plugin>
 
         <plugin>
@@ -195,21 +207,12 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven.plugin.surefire.version}</version>
           <configuration>
-            <forkCount>1</forkCount>
-            <reuseForks>false</reuseForks>
+            <argLine>
+              --illegal-access=permit
+            </argLine>
+            <forkCount>0</forkCount>
+            <useSystemClassLoader>false</useSystemClassLoader>
           </configuration>
-          <dependencies>
-            <dependency>
-              <groupId>org.junit.platform</groupId>
-              <artifactId>junit-platform-surefire-provider</artifactId>
-              <version>${dependency.junit-platform.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.junit.jupiter</groupId>
-              <artifactId>junit-jupiter-engine</artifactId>
-              <version>${dependency.junit.version}</version>
-            </dependency>
-          </dependencies>
         </plugin>
 
         <plugin>
@@ -374,27 +377,6 @@
         </plugin>
 
         <plugin>
-          <groupId>external.atlassian.jgitflow</groupId>
-          <artifactId>jgitflow-maven-plugin</artifactId>
-          <version>1.0-m5.1</version>
-          <configuration>
-            <flowInitContext>
-              <masterBranchName>master</masterBranchName>
-              <developBranchName>develop</developBranchName>
-              <featureBranchPrefix>feature-</featureBranchPrefix>
-              <releaseBranchPrefix>release-</releaseBranchPrefix>
-              <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
-              <versionTagPrefix>version-</versionTagPrefix>
-            </flowInitContext>
-            <username>${env.GIT_USER}</username>
-            <password>${env.GIT_PWD}</password>
-            <noDeploy>true</noDeploy>
-            <squash>true</squash>
-            <scmCommentPrefix>[RELEASE] </scmCommentPrefix>
-          </configuration>
-        </plugin>
-
-        <plugin>
           <groupId>org.jooq</groupId>
           <artifactId>jooq-codegen-maven</artifactId>
           <version>${maven.plugin.jooq.version}</version>
@@ -474,42 +456,14 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.sonatype.plugins</groupId>
-        <artifactId>nexus-staging-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-      </plugin>
-    </plugins>
   </build>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-api</artifactId>
+        <artifactId>junit-jupiter-engine</artifactId>
         <version>${dependency.junit.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.junit.platform</groupId>
-        <artifactId>junit-platform-launcher</artifactId>
-        <version>${dependency.junit-platform.version}</version>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
@@ -534,7 +488,7 @@
       <dependency>
         <groupId>com.jayway.awaitility</groupId>
         <artifactId>awaitility</artifactId>
-        <version>1.7.0</version>
+        <version>${dependency.awaitility.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -551,6 +505,38 @@
   </distributionManagement>
 
   <profiles>
+    <profile>
+      <id>deploy-to-central</id>
+      <activation>
+        <property>
+          <name>!maven.plugin.nexus.skip</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>owasp</id>
       <build>
